# uv-streamlit-test

./: hello.py  pyproject.toml
src/lib/: utils.py
src/ui/: hello.py
